iac/kustomize/media/base/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: media
  labels:
    app: media
    service: media
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  labels:
    app: media
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
      version: v1
  template:
    metadata:
      labels:
        app: media
        version: v1
    spec:
      serviceAccountName: media
      containers:
        - name: media
          image: httpd:2.4.67-trixie
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 50m
              memory: 86Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - name: mediapvc
              mountPath: /usr/local/apache2/htdocs/media
      volumes:
        - name: mediapvc
          persistentVolumeClaim:
            claimName: media-pvc
            readOnly: false
