iac/kustomize/media/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media
  namespace: default
spec:
  parentRefs:
    - name: gateway-public
      namespace: kgateway-system
      sectionName: https-wildcard
  hostnames:
    - media.home.bradandmarsha.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: media
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: gateway-public
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - media.home.bradandmarsha.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
