iac/kustomize/media/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - media.home.bradandmarsha.com
      secretName: certificate-media
  rules:
    - host: media.home.bradandmarsha.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: media
              port:
                number: 80
